# harmonwig

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml
src/harmonwig/: __init__.py  __main__.py  harmonwig.py
tests/: conftest.py  test_harmonicwigner_class.py  test_package.py
