[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project]
name = "harmonwig"
version = "0.1.0a0"
description = "Harmonic Wigner sampling from QM calculations."
authors = [
  { name = "Daniel Hollas", email = "daniel.hollas@bristol.ac.uk" },
]
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]
dependencies = ['ase', 'tqdm', 'cclib~=1.8.0']

[project.scripts]
harmonwig = 'harmonwig.__main__:main'

# The "dev" dependency group is automatically synced by uv
# and should thus contain all necessary deps for local development.
[dependency-groups]
dev = [
  "pytest >= 7.4",
  "pytest-cov >= 5.0",
]

[project.urls]
Homepage = "https://github.com/ispg-group/harmonwig"
"Bug Tracker" = "https://github.com/ispg-group/harmonwig/issues"
Changelog = "https://github.com/ispg-group/harmonwig/releases"


[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["harmonwig"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "PLC0415",  # `import` should be at the top-level of a file
  "ISC001",   # Conflicts with formatter
]
